--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,18 +6,43 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --check \"{src,packages}/**/*.{js,jsx,ts,tsx,scss,css,md}\"",
+    "prettier:fix": "prettier --write \"{src,packages}/**/*.{js,jsx,ts,tsx,scss,css,md}\"",
+    "lint": "eslint --ext .js,.ts,.tsx src/ packages/",
+    "lint:fix": "eslint --ext .js,.ts,.tsx --fix src/ packages/",
+    "verify": "npm run lint & npm run prettier",
+    "test": "vitest run",
+    "coverage": "vitest run --coverage",
+    "prod": "npm run verify && npm run test && npm run build"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-c8": "^0.29.2",
+    "eslint": "8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard-with-typescript": "34.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^2.8.4",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
-  }
+    "vite": "^4.1.0",
+    "vitest": "^0.29.2"
+  },
+  "workspaces": [
+    "packages/visualize"
+  ]
 }
