--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .js,.ts,.tsx src/ packages/",
     "lint:fix": "eslint --ext .js,.ts,.tsx --fix src/ packages/",
     "verify": "npm run lint & npm run prettier",
+    "fix": "npm run lint:fix & npm run prettier:fix",
     "test": "vitest run",
     "coverage": "vitest run --coverage",
     "prod": "npm run verify && npm run test && npm run build"
