--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ defaults:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build_test_deploy:
-    name: Build & test & deploy to gh-pages
+  build_deploy:
+    name: Build & deploy to gh-pages
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -38,7 +38,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Install and build
         run: |
-          npm ci
+          npm install
           npm run build
  
       - name: Deploy
