--- a/webapp/packages/tf/package.json
+++ b/webapp/packages/tf/package.json
@@ -2,5 +2,11 @@
   "name": "@js/tf",
   "version": "1.0.0",
   "description": "Tensorflow JS utils",
-  "main": "index.ts"
+  "main": "index.ts",
+  "homepage": "https://junjunguo.github.io/ml/",
+  "repository": {
+    "type": "github",
+    "directory": "webapp/packages/tf",
+    "url": "https://github.com/junjunguo/ml.git"
+  }
 }
