--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
     name: Build & deploy to gh-pages
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      BASE_URL: /ml/
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
