--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
+    paths:
+      - "webapp/**"
 
 defaults:
   run:
@@ -18,6 +20,8 @@ jobs:
     name: Build & deploy to gh-pages
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      BASE_URL: /ml/
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
