--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@mediapipe/face_detection": "^0.4.1646425229",
     "@tensorflow-models/face-detection": "^1.0.1",
-    "@tensorflow/tfjs": "^4.2.0",
+    "@tensorflow/tfjs": "~4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
