--- a/webapp/package.json
+++ b/webapp/package.json
@@ -28,6 +28,7 @@
     "@mediapipe/face_detection": "^0.4.1646425229",
     "@tensorflow-models/face-detection": "^1.0.1",
     "@tensorflow/tfjs": "~4.1.0",
+    "@tensorflow/tfjs-vis": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
