--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,13 +20,15 @@
     "verify": "npm run lint & npm run prettier",
     "fix": "npm run lint:fix & npm run prettier:fix",
     "test": "vitest run",
+    "test:watch": "vitest",
     "coverage": "vitest run --coverage",
     "prod": "npm run verify && npm run test && npm run build"
   },
   "dependencies": {
     "@mediapipe/face_detection": "^0.4.1646425229",
     "@tensorflow-models/face-detection": "^1.0.1",
-    "@tensorflow/tfjs": "^4.2.0",
+    "@tensorflow/tfjs": "~4.1.0",
+    "@tensorflow/tfjs-vis": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
@@ -47,6 +49,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "jsdom": "^21.1.0",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
@@ -55,6 +58,7 @@
   },
   "workspaces": [
     "packages/visualize",
+    "packages/emotion",
     "packages/tf"
   ]
 }
